Fix for services image alignment

--- a/src/index.scss
+++ b/src/index.scss
@@ -412,7 +412,7 @@ footer {
 
     .images-group {
         float: left;
-        max-width: 50%;
+        max-width: 45%;
         margin: 3em 2em 0 0;
     }
 
